After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 685059 - avidemux: cannot play video in push mode
avidemux: cannot play video in push mode
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 1.0.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-09-28 16:18 UTC by Arnaud Vrac
Modified: 2012-10-01 13:53 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Arnaud Vrac 2012-09-28 16:18:38 UTC
I cannot play the following file in push mode:
http://absolut.zogzog.org/share/samples/avi/HollyDollyDollySongI.avi

I get the following error:

gstavidemux.c:3407:gst_avi_demux_stream_header_push:<avidemux0> error: Invalid AVI header (no hdrl at start): LIST
Comment 1 Mark Nauwelaerts 2012-10-01 13:53:26 UTC
commit b10829d6c859fb2aa30897186710802d4ec88571
Author: Mark Nauwelaerts <mark.nauwelaerts@collabora.co.uk>
Date:   Mon Oct 1 15:44:01 2012 +0200

    avidemux: push mode; handle some initial junk before hdrl list
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=685059