avidemux: push mode; handle some initial junk before hdrl list

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=685059

Conflicts:

	gst/avi/gstavidemux.c